fix new socialfeed notes view on firefox and opera

--- a/framework/modules/socialfeed/assets/css/notes.css
+++ b/framework/modules/socialfeed/assets/css/notes.css
@@ -89,10 +89,21 @@
     max-width: 87%;
     /*top: 75%;*/
     /*left: 60%;*/
-    zoom: 15%;
-    bottom: 80px;
-    right: 80px;
-    /*max-height: 454px;*/
+    /*zoom: 15%;*/
+    /*zoom: 0.85;*/
+    /*-ms-zoom: 0.85;*/
+    /*-webkit-zoom: 0.85;*/
+    /*-moz-transform:  scale(0.85);*/
+    /*-moz-transform-origin: top left;*/
+    transform: scale(0.85);
+    transform-origin: top left;
+    -moz-transform: scale(0.85);
+    -moz-transform-origin: top left;
+    /*bottom: 80px;*/
+    /*right: 80px;*/
+    bottom: -10px;
+    right: 0;
+    max-height: 55%;
 }
 
 /*.socialfeed .pinboards.items .item {*/
